--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -496,7 +496,7 @@ L'architecture CxSOM que nous avons utilisée est en fait construite sur quatre 
 $x_p$ n'est a priori pas liée aux valeurs des autres capteurs, car contrôlée par $\w$.
 Les dépendances entre ces modalités sont présentées en figure~\ref{fig:drone_inp}. Nous y voyons que $\rho$ dépend de $\varphi$ et $v_y$ de façon linéaire, mais très bruitée.
 Nous connectons toutes les cartes entre elles.
- Elles ont donc chacune une couche de poids externe et trois couches de poids contextuels. Le but de l'architecture sera de capturer les relations entre les capteurs $\varphi, \v_y$ et la commande $\rho$ puis de générer la commande en temps réel lors de la phase de prédiction. 
+ Elles ont donc chacune une couche de poids externe et trois couches de poids contextuels. Le but de l'architecture sera de capturer les relations entre les capteurs $\varphi, v_y$ et la commande $\rho$ puis de générer la commande en temps réel lors de la phase de prédiction. 
 
 \begin{figure}
 	\centering\includegraphics[width=\textwidth]{drone_inputs}
