--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,9 +1,7 @@
 \chapter*{Conclusion}
 
-Cette thèse se place dans un but d'exploration de mécanismes de calcul et d'apprentissage pouvant émerger de l'association de modules en architecture.
-Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules, et non supervisés par un processus extérieur.
-Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral. 
-Nous avons choisi d'étudier l'association de cartes auto-organisatrices en architectures. 
+Cette thèse se place dans un but d'exploration de mécanismes de calcul et d'apprentissage pouvant émerger de l'association de modules en architecture, ici à partir de cartes auto-organisatrices.
+Dans une architecture modulaire, l'apprentissage est réalisé par l'interconnexion des modules, et non supervisés par un processus extérieur. Nous voulions également pouvoir intégrer des connexions rétroactives entre les modules afin d'apporter l'aspect non-hiérarchique, inspiré des rétroactions existant dans le cortex cérébral. 
 L'utilisation des SOM est en particulier motivée par leur capacité à représenter un espace d'entrée en une information positionnelle de faible dimension. Cette information rejoint l'organisation observée dans le cortex cérébral, et se place comme une information simple à transmettre au sein d'une architecture.
 Les travaux menés précédemment dans l'équipe de recherche, en \cite{menard05,khouzam_2013,baheux_towards_2014} ont proposé un modèle original d'interface entre cartes, s'appuyant sur une recherche de consensus au sein de l'architecture. L'objectif de la thèse est de continuer le développement de cette architecture et d'analyser les mécanismes d'organisation émergeant des règles de calcul du modèle. 
 
